<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="addtab">addTab</string>
    <string name="path">path</string>
    <string name="exit">退出</string>
    <string name="add">添加</string>
    <string name="redo">重做</string>
    <string name="undo">撤销</string>
    <string name="delete">删除</string>
    <string name="info">信息</string>
    <string name="play">运行</string>
    <string name="compile">编译</string>
</resources>